# gamedemo

./: .clang-format  .gitignore  LICENSE  README.md
KongDongWuShi/: CMakeLists.txt
KongDongWuShi/doc/: 笔记.md
KongDongWuShi/src/: animation.h  atlas.h  barb.cpp  barb.h  bulletTimeManager.cpp  character.cpp  characterManager.cpp  characterManager.h  enemy.cpp  enemy.h  enemyStateNodes.cpp  enemyStateNodes.h  main.cpp  player.cpp  player.h  playerStateNodes.cpp  resourcesManager.cpp  stateMachine.cpp  stateNode.h  sword.h  timer.h  util.h  vector2.h
KongDongWuShi/src/common/: animation.h  atlas.h  stateMachine.h  timer.h  util.h
KongDongWuShi/src/enemy/: barb.cpp  enemy.cpp  enemyStateNodes.cpp  sword.cpp
KongDongWuShi/src/manager/: bulletTimeManager.h  character.cpp  character.h  characterManager.cpp  collisionBox.h  collisionLayer.h  collisionManager.cpp  collisionManager.h  resourcesManager.cpp  resourcesManager.h
KongDongWuShi/src/player/: player.cpp  player.h  playerStateNodes.cpp  playerStateNodes.h
KongDongWuShi/src/scene/: scene.h
